--- a/Engines/Engines.csproj
+++ b/Engines/Engines.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Paginacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CalculosGerenciais.cs" />
     <Compile Include="SomarCellDataGrid.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
