--- a/Sistema.View/Sistema.View.csproj
+++ b/Sistema.View/Sistema.View.csproj
@@ -169,6 +169,12 @@
     <Compile Include="views\FornecedoresView.Designer.cs">
       <DependentUpon>FornecedoresView.cs</DependentUpon>
     </Compile>
+    <Compile Include="views\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="views\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="views\TipoUndsView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -332,6 +338,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="views\FornecedoresView.resx">
       <DependentUpon>FornecedoresView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\TipoUndsView.resx">
       <DependentUpon>TipoUndsView.cs</DependentUpon>
@@ -663,6 +672,8 @@
     <None Include="image\crud48x48\list48.png" />
     <None Include="image\crud48x48\query_stats48.png" />
     <None Include="image\crud16x16\truck16x16.png" />
+    <None Include="image\crud48x48\password48.png" />
+    <None Include="image\crud48x48\person48.png" />
     <Content Include="image\icons8-truck-32.png" />
     <None Include="image\truck-esquerda-24.png" />
   </ItemGroup>
