sábado 12 de novembro 2022 as 19:32, sistema de permissões funcionando com sucesso, classe PerfilCrud criada, aplicada a VeiculosView

--- a/Engines/Engines.csproj
+++ b/Engines/Engines.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PerfilCrud.cs" />
+    <Compile Include="PerfilMenu.cs" />
     <Compile Include="ProgramContainer.cs" />
     <Compile Include="Paginacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
