Aplicacao das regras de Adiministrador para itens de menu

--- a/Engines/Engines.csproj
+++ b/Engines/Engines.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="PerfilCrud.cs" />
     <Compile Include="PerfilMenu.cs" />
+    <Compile Include="PerfilMenuItemAdmin.cs" />
     <Compile Include="ProgramContainer.cs" />
     <Compile Include="Paginacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
